  - Restored the "catchall" constructor on the base
    TypeEngine class, with a deprecation warning.
    This so that code which does something like
    Integer(11) still succeeds.

  - Fixed regression whereby MetaData() coming
    back from unpickling did not keep track of 
    new things it keeps track of now, i.e.
    collection of Sequence objects, list
    of schema names.  [ticket:2104]

0.7.0b3
=======
- general
  - Lots of fixes to unit tests when run under Pypy
    (courtesy Alex Gaynor).

- orm
  - Changed the underlying approach to query.count().
    query.count() is now in all cases exactly:

        query.
            from_self(func.count(literal_column('1'))).
            scalar()

    That is, "select count(1) from (<full query>)".
    This produces a subquery in all cases, but 
    vastly simplifies all the guessing count()
    tried to do previously, which would still
    fail in many scenarios particularly when
    joined table inheritance and other joins
    were involved.  If the subquery produced
    for an otherwise very simple count is really 
    an issue, use query(func.count()) as an 
    optimization.  [ticket:2093]

  - some changes to the identity map regarding
    rare weakref callbacks during iterations.
    The mutex has been removed as it apparently 
    can cause a reentrant (i.e. in one thread) deadlock,
    perhaps when gc collects objects at the point of 
    iteration in order to gain more memory.  It is hoped
    that "dictionary changed during iteration" will
    be exceedingly rare as iteration methods internally
    acquire the full list of objects in a single values() 
    call. Note 0.6.7 has a more conservative fix here
    which still keeps the mutex in place. [ticket:2087]

  - A tweak to the unit of work causes it to order
    the flush along relationship() dependencies even if 
    the given objects don't have any inter-attribute 
    references in memory, which was the behavior in 